--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
       "cookie-parser": "^1.4.3",
       "cors": "^2.8.4",
       "debug": "^3.1.0",
-      "ejs": "^2.5.7",
       "express": "^4.16.2",
-      "knex": "^0.13.0",
-      "morgan": "^1.9.0",
-      "pg": "^7.3.0"
+      "morgan": "^1.9.0"
     }
   }
   
